Fixed filter label alignment in IE7 and 8

--- a/wp-content/themes/ppo/assets/css/ie7.css
+++ b/wp-content/themes/ppo/assets/css/ie7.css
@@ -31,4 +31,9 @@ footer .input-group .form-control {
 
 }
 
+.group-label {
+    left: 0;
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+
 
